--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -43,6 +43,7 @@
     <div class="footer">
         <p>Copyright • Todos los derechos reservados • 2022</p>
     </div>
+    
+        <div th:replace="fragments/footer.html"></div>
 </body>
-
 </html>
