--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -46,9 +46,6 @@
     <div th:replace="fragments/error.html"></div>
     </div>
     
-    <div class="footer">
-        <p>Copyright • Todos los derechos reservados • 2022</p>
-    </div>
+    <div th:replace="fragments/footer.html"></div>
 </body>
-
 </html>
