--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -11,17 +11,18 @@ body{
 }
 
 .titulo{
-    text-align: center;
-    color: black;
-    margin: 0;
-    font-size: 25px;
+    text-align: left;
+    color: red;
+    margin: 20px 0px 0px 30px;
+    font-size: 60px;
+    font-family:string ;
     text-shadow:
         0 0 5px red,
-        0 0 15px red,
-        0 0 30px red,
-        0 0 50px red,
-        0 0 75px red,
-        0 0 100px red;
+        0 0 15px yellow,
+        0 0 30px yellow,
+        0 0 50px yellow,
+        0 0 75px yellow,
+        0 0 100px yellow;
 }
 
 .footer {
@@ -31,7 +32,7 @@ body{
     bottom: 0px;
     height: 3%;
     width: 100%;
-    text-align: center;
+    text-align: right;
     text-shadow:
         0 0 5px red,
         0 0 15px red,
@@ -44,14 +45,14 @@ body{
 .reesplandor {
     color: black;
     margin: 0;
-    font-size: 25px;
+    font-size: 20px;
     text-shadow:
-        0 0 5px red,
-        0 0 15px red,
-        0 0 30px red,
-        0 0 50px red,
-        0 0 75px red,
-        0 0 100px red;
+        0 0 5px orange,
+        0 0 15px orange,
+        0 0 30px orange,
+        0 0 50px orange,
+        0 0 75px orange,
+        0 0 100px orange;
 }
 
 .mensajeExito {
@@ -69,7 +70,6 @@ body{
 .publicacionTarjeta {
     border-radius: 20px;
     max-width: 1000px;
-    padding-bottom: 15px;
     color:white;
     font-family:cursive;
 }
@@ -80,8 +80,9 @@ body{
 }
 
 #tarjeta{
-    box-shadow: inset 0 0 5px black, 0 0 25px yellowgreen;
+    box-shadow: inset 0 0 5px graytext;
     font-family: arial;
+    width: 100%;
 }
 
 
@@ -100,8 +101,16 @@ body{
     margin-top: 40px;
     margin-left: 100px;
     overflow-y: scroll;
-    height: 817px;
-    width: 50%;
+    height: 647px;
+    width:50%;
+}
+#scroll-perfil{
+    padding-top: 0px;
+    margin-top: 0px;
+    float:right;
+    width: 100%;
+    height: 542px;
+
 }
 
 .scroll::-webkit-scrollbar{
