--- a/src/main/resources/templates/lista_usuarios.html
+++ b/src/main/resources/templates/lista_usuarios.html
@@ -19,35 +19,37 @@
         </div>
     </nav>
 
-    <div class="scroll">
-        <div th:each="usuario:${usuarios}">
-            <div class="card bg-black m-3">
-                <div class="card-body" style="height: 200px">
-                    <div th:if="${usuario.imagen == null}">
-                        <img class="publicacionTarjeta" style="max-width: 20%" align='right' src="/images/sin_imagen_de_perfil.jpg" alt="usuario sin imagen de perfil">
-                    </div>
-                    <div th:unless="${usuario.imagen == null}">
-                        <a th:href="@{/usuario/perfil/__${usuario.id}__}">
-                            <img class="publicacionTarjeta" th:src="${usuario.imagen.imagenUrl}" alt='foto de perfil' style="width: 20%" align='right'>
-                        </a>
-                    </div>
+    <div class="scroll" style='width:50%'>
+        <div class="row mx-3">
+            <div th:each="usuario:${usuarios}">
+                <div class="card bg-black m-2" id='tarjeta'>
+                    <div class="card-body">
+                        <div th:if="${usuario.imagen == null}">
+                            <img class="publicacionTarjeta" style="width: 30%" align='right' src="/images/sin_imagen_de_perfil.jpg" alt="usuario sin imagen de perfil">
+                        </div>
+                        <div th:unless="${usuario.imagen == null}">
+                            <a th:href="@{/usuario/perfil/__${usuario.id}__}">
+                                <img class="publicacionTarjeta" th:src="${usuario.imagen.imagenUrl}" alt='foto de perfil' style="width: 30%" align='right'>
+                            </a>
+                        </div>
 
-                    <h3 th:text="${usuario.nombreu}"></h3>
-                    <h6 th:text="${usuario.fechalta}"></h6>  
-                    
-                    <button style="margin-top: 60px" class="btn btn-warning">
-                        <a class="text-decoration-none text-dark" th:href="@{/usuario/perfil/__${usuario.id}__}" >Ver Perfil</a>
-                    </button>
-                    <button style="margin-top: 60px" class="btn btn-danger" sec:authorize="hasAnyRole('USER')" th:if="${session.usuariosession.nombreu == usuario.nombreu}">
-                        <a class="text-decoration-none text-dark" th:href="@{/admin/eliminar_usuario/__${usuario.id}__}">Eliminar Usuario</a>
-                    </button>
-                    <button style="margin-top: 60px" class="btn btn-danger" sec:authorize="hasAnyRole('ADMIN')">
-                        <a class="text-decoration-none text-dark" th:href="@{/admin/eliminar_usuario/__${usuario.id}__}">Eliminar Usuario</a>
-                    </button>
+                        <h3 th:text="${usuario.nombreu}" style="margin-bottom: 0px; color: chocolate; font-weight: bold; font-family: string"></h3>
+                        <h6 th:text="'Miembro desde ' + ${usuario.fechalta}" style="color: grey"></h6>  
+
+                        <button style="margin-top: 95px" class="btn btn-warning">
+                            <a class="text-decoration-none text-dark" th:href="@{/usuario/perfil/__${usuario.id}__}" >Ver Perfil</a>
+                        </button>
+                        <button style="margin-top: 95px" class="btn btn-danger" sec:authorize="hasAnyRole('USER')" th:if="${session.usuariosession.nombreu == usuario.nombreu}">
+                            <a class="text-decoration-none text-dark" th:href="@{/admin/eliminar_usuario/__${usuario.id}__}">Eliminar Usuario</a>
+                        </button>
+                        <button style="margin-top: 95px" class="btn btn-danger" sec:authorize="hasAnyRole('ADMIN')">
+                            <a class="text-decoration-none text-dark" th:href="@{/admin/eliminar_usuario/__${usuario.id}__}">Eliminar Usuario</a>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-
+    <div th:replace="fragments/footer.html"></div>
 </body>
 </html>
