--- a/src/main/resources/templates/publicaciones.html
+++ b/src/main/resources/templates/publicaciones.html
@@ -42,12 +42,15 @@
     </nav>
 
     <div style="display: frex" th:replace="fragments/exito.html"></div>
+    
+    <p class="reesplandor" style="text-align: left; font-weight: bold; margin: 20px 0px 0px 5px">Últimas Publicaciones</p>
 
     <div class="scroll">
         <div class="row mx-3">
             <div th:each="publicacion:${publicaciones}" class="publicacionTarjeta" style='padding-bottom: 15px;'>
                 <div class="card bg-black" id='tarjeta'>
                     <div class="card-body" >
+                        
                         <div th:if="${publicacion.creador.imagen == null}">
                             <a th:href="@{/usuario/perfil/__${publicacion.creador.id}__}">
                                 <img class="publicacionImagen" style="width: 140px" align='right' src="/images/sin_imagen_de_perfil.jpg" alt="usuario sin imagen de perfil">
@@ -58,6 +61,7 @@
                                 <img class="publicacionImagen" th:src="${publicacion.creador.imagen.imagenUrl}" alt='foto de perfil' style="width: 140px" align='right'>
                             </a>
                         </div>
+                        
                         <h3 style="margin-bottom: 0px; color: chocolate; font-weight: bold; font-family: string" th:text="${publicacion.creador.nombreu}"></h3>
                         <small style="color: grey;" th:text="${publicacion.fecha}"></small>
 
@@ -79,7 +83,7 @@
             </div>
         </div>
     </div>
-    
-       <div th:replace="fragments/footer.html"></div>
+
+    <div th:replace="fragments/footer.html"></div>
 </body>
 </html>
