--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -43,8 +43,8 @@ body{
 }
 
 .reesplandor {
+    margin: 0px;
     color: black;
-    margin: 0;
     font-size: 20px;
     text-shadow:
         0 0 5px orange,
@@ -98,7 +98,7 @@ body{
 
 .scroll{
     padding-top: 10px;
-    margin-top: 40px;
+    margin-top: 0px;
     margin-left: 100px;
     overflow-y: scroll;
     height: 647px;
@@ -106,7 +106,6 @@ body{
 }
 #scroll-perfil{
     padding-top: 0px;
-    margin-top: 0px;
     float:right;
     width: 100%;
     height: 542px;
