--- a/src/main/resources/templates/crear_publicacion.html
+++ b/src/main/resources/templates/crear_publicacion.html
@@ -20,47 +20,10 @@
         </div>
     </nav>
 
-    <h2 class="reesplandor">Crear Publicacion</h2>
-    <br>
-    <div>
-        <form th:action="@{/guardar_creada}" method="POST" enctype="multipart/form-data" th:object="${publicacion}">
-
-            <input type="hidden" name="id" th:field="*{id}">
-
-            <div class="form-group">
-                <input type="text" class="form-control" placeholder="Titulo" name="titulo" th:field="*{titulo}">
-            </div>
-
-            <div class="form-group">
-                <textarea class="form-control" placeholder="Comentario" name="comentario" th:field="*{comentario}"></textarea>
-            </div>
-
-            <div class="form-group">
-                <input type="text" class="form-control" placeholder="Tu link" name="link" th:field="*{link}">
-            </div>
-
-            <!--                <div class="form-group">
-                                <input type="file" class="form-control" name="file">
-                            </div>-->
-
-            <button type="submit" name="guardar" class="btn btn-primary">Guardar</button>
-
-            <br>
-            <br>
-
-            <div th:if="${error != null}" class="card text-white bg-transparent mb-3 mensajeError">
-                <div class="card-body">
-                    <h5 class="card-title">Error</h5>
-                    <p class="card-text" th:text="${error}"></p>
-                </div>
-            </div>
-        </form>
-
-    </div>
-    <div class="footer">
-        <p>Copyright • Todos los derechos reservados • 2022</p>
-    </div>
+    <h2 class="reesplandor" style="margin: 20px 0px 5px 10px">Crear Publicacion</h2>
     
-        <div th:replace="fragments/footer.html"></div>
+    <div th:replace="fragments/formulario.html"></div>
+
+    <div th:replace="fragments/footer.html"></div>
 </body>
 </html>
