--- a/src/main/resources/templates/perfil.html
+++ b/src/main/resources/templates/perfil.html
@@ -41,14 +41,14 @@
             <form th:action="@{/usuario/modificarNombreDeUsuario/__${usuario.id}__}" method="POST" class="formulario">
                 <div sec:authorize="hasAnyRole('USER')">
                     <p th:if="${session.usuariosession.nombreu == usuario.nombreu}">
-                        <input type="text" class="form-control" placeholder="modificar tu nombre de usuario" name="nombreu">
+                        <input type="text" class="form-control" placeholder="modificar tu nombre de usuario" name="nombreu" style="width: 69%; margin-left: 10px">
                         <button type="submit" name="modificarNombreDeUsuario" class="btn btn-light mt-3 botones">Modificar</button>
                     </p>
                 </div>
                 <div sec:authorize="hasAnyRole('ADMIN')">
                     <p>
-                        <input type="text" class="form-control" placeholder="modifica tu nombre de usuario" name="nombreu">
-                        <button type="submit" name="modificarNombreDeUsuario" class="btn btn-light mt-3 botones">Modificar</button>
+                        <input type="text" class="form-control" placeholder="modifica tu nombre de usuario" name="nombreu" style="width: 69%; margin-left: 10px">
+                        <button type="submit" name="modificarNombreDeUsuario" class="btn btn-dark mt-1 botones" style="margin-left: 10px">Modificar</button>
                     </p>
                 </div>
             </form>
@@ -71,9 +71,9 @@
                         <div sec:authorize="hasAnyRole('USER')">
                             <p th:if="${session.usuariosession.nombreu == usuario.nombreu}">
                                 <input type="file" class="form-control-plaintext" placeholder="modifica tu foto de perfil" name="multipartFile">
-                                <button type="submit" name="modificarImagenDePerfil" class="btn btn-light mt-3 botones">Modificar</button>
+                                <button type="submit" name="modificarImagenDePerfil" class="btn btn-dark mt-1 botones">Modificar</button>
                                 <span th:unless="${usuario.imagen == null}">
-                                    <button th:if="${session.usuariosession.nombreu == usuario.nombreu}" class="btn btn-light mt-3 botones">
+                                    <button th:if="${session.usuariosession.nombreu == usuario.nombreu}" class="btn btn-danger mt-1 botones">
                                         <a th:href="@{/usuario/borrarImagenDePerfil/__${usuario.id}__}" class="text-decoration-none text-dark" >Eliminar</a>
                                     </button>
                                 </span>
@@ -82,9 +82,9 @@
                         <div sec:authorize="hasAnyRole('ADMIN')">
                             <p>
                                 <input type="file" class="form-control-plaintext" placeholder="modifica tu foto de perfil" name="multipartFile">
-                                <button type="submit" name="modificarImagenDePerfil" class="btn btn-light mt-3 botones">Modificar</button>
+                                <button type="submit" name="modificarImagenDePerfil" class="btn btn-dark mt-1 botones">Modificar</button>
                                 <span th:unless="${usuario.imagen == null}">
-                                    <button class="btn btn-light mt-3 botones">
+                                    <button class="btn btn-danger mt-1 botones">
                                         <a th:href="@{/usuario/borrarImagenDePerfil/__${usuario.id}__}" class="text-decoration-none text-dark" >Eliminar</a>
                                     </button>
                                 </span>
@@ -99,7 +99,7 @@
             </div>
 
             <div style="width: 100%">
-                <p class="reesplandor" style="text-align: center; font-weight: bold">Publicaciones Hechas </p>
+                <p class="reesplandor" style="text-align: center; font-weight: bold"><u>Publicaciones Hechas</u></p>
                 <div class="scroll" id="scroll-perfil">
                     <div class="row mx-3">
                         <div th:each="publicacion:${publicaciones}" class="publicacionTarjeta" style="width: 60%; margin-top: 12px">
