--- a/src/main/resources/templates/perfil.html
+++ b/src/main/resources/templates/perfil.html
@@ -60,42 +60,17 @@
         <div style="display: flex">
             <div th:if="${usuario.imagen == null}">
                 <img src="/images/sin_imagen_de_perfil.jpg" alt="usuario sin imagen de perfil" style="border-radius: 200px; width: 300px; margin: 0px 0px 0px 50px">
+                <div th:replace="fragments/modificar_o_eliminar_imagen_perfil.html"></div>
             </div>
+            
             <div th:unless="${usuario.imagen == null}" style="text-align: center; margin: 20px 0px 0px 50px">
                 <a th:href="${usuario.imagen.imagenUrl}">
                     <img th:src="${usuario.imagen.imagenUrl}" alt='foto de perfil' style="border-radius: 200px; width: 300px; margin-bottom: 10px">
                 </a>
-                
-                <div sec:authorize="hasAnyRole('USER','ADMIN')">
-                    <form th:action="@{/usuario/modificarImagenDePerfil/__${usuario.id}__}" method="POST" enctype="multipart/form-data" class="formulario">
-                        <div sec:authorize="hasAnyRole('USER')">
-                            <p th:if="${session.usuariosession.nombreu == usuario.nombreu}">
-                                <input type="file" class="form-control-plaintext" placeholder="modifica tu foto de perfil" name="multipartFile">
-                                <button type="submit" name="modificarImagenDePerfil" class="btn btn-dark mt-1 botones">Modificar</button>
-                                <span th:unless="${usuario.imagen == null}">
-                                    <button th:if="${session.usuariosession.nombreu == usuario.nombreu}" class="btn btn-danger mt-1 botones">
-                                        <a th:href="@{/usuario/borrarImagenDePerfil/__${usuario.id}__}" class="text-decoration-none text-dark" >Eliminar</a>
-                                    </button>
-                                </span>
-                            </p>
-                        </div>
-                        <div sec:authorize="hasAnyRole('ADMIN')">
-                            <p>
-                                <input type="file" class="form-control-plaintext" placeholder="modifica tu foto de perfil" name="multipartFile">
-                                <button type="submit" name="modificarImagenDePerfil" class="btn btn-dark mt-1 botones">Modificar</button>
-                                <span th:unless="${usuario.imagen == null}">
-                                    <button class="btn btn-danger mt-1 botones">
-                                        <a th:href="@{/usuario/borrarImagenDePerfil/__${usuario.id}__}" class="text-decoration-none text-dark" >Eliminar</a>
-                                    </button>
-                                </span>
-                            </p>
-                        </div> 
-                    </form>
-                </div>                
+                <div th:replace="fragments/modificar_o_eliminar_imagen_perfil.html"></div>
 
                 <p class="reesplandor" th:text="'Miembro desde: ' + ${usuario.fechalta}"></p>
                 <p class="reesplandor" th:text="'Rol: ' + ${usuario.rol}"></p>
-
             </div>
 
             <div style="width: 100%">
