--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -13,7 +13,7 @@ body{
 .titulo{
     text-align: left;
     color: red;
-    margin: 20px 0px 0px 30px;
+    margin: 10px 0px 0px 30px;
     font-size: 60px;
     font-family:string ;
     text-shadow:
@@ -69,7 +69,6 @@ body{
 
 .publicacionTarjeta {
     border-radius: 20px;
-    max-width: 1000px;
     color:white;
     font-family:cursive;
 }
@@ -99,21 +98,21 @@ body{
 .scroll{
     padding-top: 10px;
     margin-top: 0px;
-    margin-left: 100px;
     overflow-y: scroll;
+    width: 60%;
     height: 636px;
-    width:50%;
 }
 #scroll-perfil{
     padding-top: 0px;
     float:right;
     width: 100%;
-    height: 542px;
-
+}
+#scroll-lista{
+    width: 60%;
 }
 
 .scroll::-webkit-scrollbar{
-    width: 70px;
+    width: 100%;
 }
 
 .navbarBotones {
