--- a/src/main/resources/templates/fragments/formulario.html
+++ b/src/main/resources/templates/fragments/formulario.html
@@ -14,7 +14,7 @@
         <input type="text" class="form-control" placeholder="Tu link" name="link" th:field="*{link}">
     </div>
 
-    <button type="submit" name="guardar" class="btn btn-dark" style="margin-left: 10px">Guardar</button>
+    <button type="submit" name="guardar" class="btn btn-dark" style="width: 60%; margin-left: 10px">Guardar</button>
 
     <div th:replace="fragments/error.html"></div>
 
