--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -36,6 +36,8 @@
         </form>
 
     </div>
+    <br>
+    <div th:replace="fragments/error.html"></div>
 
     <div th:replace="fragments/footer.html"></div>
 </body>
