--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,3 +1,8 @@
 <div class="footer">
-    <p>Copyright • Todos los derechos reservados • 2022</p>
+
+    <script>
+        var fecha = new Date();
+        document.write("Copyright • Todos los derechos reservados • "+ (fecha.getYear()+1900));
+    </script>
+
 </div>
