--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -2,6 +2,7 @@ body{
     background-image: url('/images/megadeth2.png');
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 #fondoBienvenida{
@@ -12,9 +13,9 @@ body{
 
 .titulo{
     text-align: left;
-    color: red;
-    margin: 10px 0px 0px 30px;
-    font-size: 60px;
+    color: darkred;
+    margin: 25px 0px 0px 30px;
+    font-size: 40px;
     font-family:string ;
     text-shadow:
         0 0 5px red,
@@ -41,7 +42,6 @@ body{
         0 0 75px red,
         0 0 100px red;
     padding-right: 5px;
-
 }
 
 .reesplandor {
@@ -74,6 +74,7 @@ body{
     border-radius: 20px;
     color:white;
     font-family:cursive;
+    padding-bottom: 15px;
 }
 
 .publicacionImagen {
@@ -89,7 +90,9 @@ body{
 
 
 .headbangersLogo {
-    width: 20%;
+    background-size: cover;
+    background-attachment: fixed;
+    width:250px;
 }
 
 .logoBienvenida{
@@ -99,32 +102,70 @@ body{
 }
 
 .scroll{
-    padding-top: 10px;
-    margin-top: 0px;
+    margin-top: 105px;
     overflow-y: scroll;
-    width: 60%;
-    height: 636px;
+    width: 800px;
+    position: absolute;
+    top:0;
+    bottom:0;
 }
 #scroll-perfil{
     padding-top:0px;
     float:right;
-    width: 100%;
+    width: 600px;
 }
-#scroll-lista{
-    width: 60%;
-
-}
-
 .scroll::-webkit-scrollbar{
     width: 100%;
 }
 
 .navbarBotones {
     position:absolute;
-    margin-top: 20px;
+    margin-top: 10px;
     top:0; 
     right:0;
 }
+.flex{
+    display: flex;
+}
+
+@media (max-width: 900px){
+    .navbarBotones {
+        position:absolute;
+        top:0; 
+        right:0;
+    }
+    .scroll{
+        overflow-y: scroll;
+        width:100%;
+        position: absolute;
+        margin-bottom: 15px;
+    }
+    #scroll-perfil{
+        float: none;
+        width: 100%;
+        position: absolute;
+        margin-bottom: 15px;
+    }
+    .footer {
+        color: greenyellow;
+        position: fixed;
+        left: 0px;
+        bottom: 0px;
+        height: 3%;
+        text-align: right;
+        text-shadow:
+            0 0 5px red,
+            0 0 15px red,
+            0 0 30px red,
+            0 0 50px red,
+            0 0 75px red,
+            0 0 100px red;
+        padding-right: 5px;
+        padding-top: 3px;
+        font-size: 80%;
+    }
+}
+
 
 .temblor{
 }
