--- a/src/main/resources/templates/fragments/modificar_o_eliminar_imagen_perfil.html
+++ b/src/main/resources/templates/fragments/modificar_o_eliminar_imagen_perfil.html
@@ -2,7 +2,7 @@
     <form th:action="@{/usuario/modificarImagenDePerfil/__${usuario.id}__}" method="POST" enctype="multipart/form-data" class="formulario">
         <div sec:authorize="hasAnyRole('USER')">
             <p th:if="${session.usuariosession.nombreu == usuario.nombreu}">
-                <input type="file" class="form-control-plaintext" placeholder="modifica tu foto de perfil" name="multipartFile" style="margin-left:90px">
+                <input type="file" class="form-control-plaintext" placeholder="modifica tu foto de perfil" name="multipartFile" style="margin-left:50px">
                 <button type="submit" name="modificarImagenDePerfil" class="btn btn-dark mt-1">Modificar</button>
                 <span th:unless="${usuario.imagen == null}">
                     <button th:if="${session.usuariosession.nombreu == usuario.nombreu}" class="btn btn-danger mt-1 botones">
@@ -14,11 +14,11 @@
         
         <div sec:authorize="hasAnyRole('ADMIN')">
             <p>
-                <input type="file" class="form-control-plaintext" placeholder="modifica tu foto de perfil" name="multipartFile" style="margin-left:90px">
-                <button type="submit" name="modificarImagenDePerfil" class="btn btn-dark mt-1">Modificar</button>
+                <input type="file" class="form-control-plaintext" placeholder="modifica tu foto de perfil" name="multipartFile" style="margin-left:50px">
+                <button type="submit" name="modificarImagenDePerfil" class="btn btn-dark mt-1" style="margin: 0 0 0 50px">Modificar</button>
                 <span th:unless="${usuario.imagen == null}">
                     <button class="btn btn-danger mt-1 botones">
-                        <a th:href="@{/usuario/borrarImagenDePerfil/__${usuario.id}__}" class="text-decoration-none text-dark">Eliminar</a>
+                        <a th:href="@{/usuario/borrarImagenDePerfil/__${usuario.id}__}" class="text-decoration-none text-dark" style="margin-left:5px">Eliminar</a>
                     </button>
                 </span>
             </p>
